# auto-name-enum

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yaml  main.yaml  push_qa.yaml
auto_name_enum/: __init__.py  base.py
src/auto_name_enum/: __init__.py  base.py  mixins.py
tests/: test_auto_name_enum.py  test_mixins.py
