[tool.poetry]
name = "auto-name-enum"
version = "1.2.0"
description = "String-based Enum class that automatically assigns values"
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dusktreader/auto-name-enum"


[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.1.0"
isort = "^5.10.1"
pytest-random-order = "^1.0.4"
pytest-cov = "^3.0.0"
pyproject-flake8 = "^0.0.1-alpha.2"
mypy = "^0.931"

[tool.pytest.ini_options]
addopts = [
    "--random-order",
    "--cov=auto_name_enum",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
lines_after_imports = "2"
include_trailing_comma = true
multi_line_output = 3
profile = "black"

[tool.flake8]
max-line-length = 120
max-complexity = 40

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
