[project]
name = "auto-name-enum"
version = "3.0.0"
description = "String-based Enum class that automatically assigns values"
authors = [
    {name = "Tucker Beck", email ="tucker.beck@gmail.com"},
]
readme = "README.md"
license-files = ["LICENSE.md"]

requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.13.2 ; python_full_version < '3.12'",
]

[dependency-groups]
dev = [
    "basedpyright>=1.28.5",
    "ipython>=8.18.1",
    "mypy>=1.15.0",
    "pyclean>=3.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-random-order>=1.1.1",
    "ruff>=0.11.5",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = [
    "--cov=src/auto_name_enum",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "--cov-report=xml:.coverage.xml",
    "--junitxml=.junit.xml",
    "--override-ini=junit_family=legacy",
]

[tool.ruff]
line-length = 120
src = ["src/auto_name_enum", "tests"]

[tool.mypy]
pretty = true
files = ["src/auto_name_enum", "tests"]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportUnusedExpression = false

[tool.hatch.build.targets.wheel]
packages = ["src/auto_name_enum"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
