[project]
name = "auto-name-enum"
version = "4.0.0"
description = "String-based Enum class that automatically assigns values"
authors = [
    {name = "Tucker Beck", email ="tucker.beck@gmail.com"},
]
readme = "README.md"
license-files = ["LICENSE.md"]

requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.13.2 ; python_full_version < '3.12'",
]
keywords = ["enum", "auto", "name", "string"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/dusktreader/auto-name-enum"
Repository = "https://github.com/dusktreader/auto-name-enum"
Changelog = "https://github.com/dusktreader/auto-name-enum/blob/main/CHANGELOG.md"
Issues = "https://github.com/dusktreader/auto-name-enum/issues"

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pyclean>=3.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-random-order>=1.1.1",
    "ruff>=0.11.5",
    "ty>=0.0.1a7",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = [
    "--cov=src/auto_name_enum",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "--cov-report=xml:.coverage.xml",
    "--junitxml=.junit.xml",
    "--override-ini=junit_family=legacy",
]

[tool.ruff]
line-length = 120
src = ["src/auto_name_enum", "tests"]

[tool.ty.src]
include = ["src", "tests"]

[build-system]
requires = ["uv_build>=0.7.7,<0.8"]
build-backend = "uv_build"
